# POSTerminalQt

./: TTL.json  data.json
BiznesCafe/: Accounting.cpp  Accounting.h  CMakeLists.txt  Edit.cpp  Edit.h  Overdue.cpp  Overdue.h  Report.cpp  Report.h  Selling.cpp  Selling.h  addingform.cpp  addingform.h  addingform.ui  americ_w_mform.cpp  americ_w_mform.h  americ_w_mform.ui  americanoform.cpp  americanoform.h  americanoform.ui  candiesform.cpp  candiesform.h  candiesform.ui  cappuccinoform.cpp  cappuccinoform.h  cappuccinoform.ui  checkform.cpp  checkform.h  checkform.ui  cocoaform.cpp  cocoaform.h  cocoaform.ui  croissantform.cpp  croissantform.h  croissantform.ui  datafromjsonform.cpp  datafromjsonform.h  datafromjsonform.ui  doppioform.cpp  doppioform.h  (+71 more)
